kubernetes/ingress/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: urlshortner-service
            port:
              number: 80
